# 3d-demo

./: .gitignore  CMakeLists.txt  README.md  win-configure.bat
assets/: RedFox2.glb  cube.gltf  experiment.blend1  notes.txt
assets/models/: experiment.blend  plane.blend  plane.blend1  plane.dae  plane2.gltf  scene.blend  scene.blend1  scene.gltf  zeroOneCone.glb  zeroOneCone2.glb  zeroOneCube.glb
assets/models/trees/: derevo_01.gltf
assets/scenes/: monkey.gltf
assets/scenes/sponza/: sponza_j.gltf  sponza_j2.gltf
assets/shaders/: bloom.fs.glsl  bloom_prepass.fs.glsl  camera.glsl  constant_blocks.inc.glsl  default_pbr.fs.glsl  default_pbr.vs.glsl  depth_only.frag.glsl  depth_only.vert.glsl  dfdxy_example.fs.glsl  doom_final_fx.glsl  doom_hdr2ldr.glsl  doom_light_frag.glsl  doom_light_vert.glsl  doom_resize.frag.glsl  doom_ssao.frag.glsl  draw_point.fs.glsl  draw_point.vs.glsl  draw_point2.fs.glsl  draw_point2.vs.glsl  fullscreen_rect.vs.glsl  fxaa.fs.glsl  fxaa.vs.glsl  fxaa3.fs.glsl  gauss_filter.cs.glsl  gauss_filter.fs.glsl  kernel.fs.glsl  kernel.vs.glsl  kernel2.fs.glsl  kernel2.vs.glsl  light.glsl  material.glsl  matrix.glsl  model_test.fs.glsl  model_test.vs.glsl  model_test_gloss.fs.glsl  pbr.fs.glsl  pbr.vs.glsl  pbr2.fs.glsl  pbr2.vs.glsl  pbr_functions.inc.glsl  (+16 more)
assets/shaders/builtin/: bloom_filter.frag.glsl  bloom_filter.vert.glsl  color.frag.glsl  color.vert.glsl  common.inc.glsl  common_uniforms.inc.glsl  default_textured.frag.glsl  default_textured.vert.glsl  defs.inc  (+29 more)
assets/textures/: base-white-tile_bump.ktx2  debug_uv.dds  player_flashlight.dds
backup/: JSE_BoundingVolume.cpp  JSE_Mesh.cpp  JSE_Mesh.h
backup/demo/: buffer.h  demo.h  demo1.cpp  draw_vert.h  effect.h  effect_bump.h  effect_cube_test.cpp  effect_cube_test.h  effect_model_loading.cpp  entity3d.h  heap.cpp  heap.h  light.cpp  material.cpp  material.h  mesh.cpp  types.h  world.cpp
demo/: bounds.cpp  bounds.h  camera.h  common.h  demo.cpp  demo.h  draw_vert.h  effect.h  effect_bump.cpp  effect_bump.h  effect_compute_test.cpp  effect_compute_test.h  effect_model_loading.cpp  effect_model_loading.h  effect_pointcube.cpp  effect_pointcube.h  effect_test_engine.cpp  effect_test_engine.h  entity3d.cpp  entity3d.h  filesystem.cpp  filesystem.h  light.h  logger.cpp  logger.h  material.cpp  material.h  mesh.cpp  mesh.h  render_mesh.cpp  types.h  unit_box.h  unit_rect.h  world.cpp  world.h
demo/opengl/: gl_common.cpp  gl_common.h  gl_gpu_buffer.cpp  gl_gpu_program.cpp  gpu.cpp  gpu.h  gpu_buffer.cpp  gpu_buffer.h  gpu_framebuffer.cpp  gpu_framebuffer.h  gpu_program.cpp  gpu_program.h  gpu_texture.cpp  gpu_texture.h  gpu_types.h  gpu_utils.cpp  gpu_utils.h  gpu_vertex_layout.cpp  gpu_vertex_layout.h  pipeline.cpp  pipeline.h  window.h
demo/resources/: filesystem.cpp  resource_manager.cpp  resource_manager.h
demo/scene/: animation.cpp  animation.h  camera.h  common.h  gltf_loader.cpp  gltf_loader.h  light.h  loader.h  material.h  mesh.h  node.cpp  node.h  primitive.h  scene.cpp  scene.h  texture.h
engine/: Common.h  common.h  engine.h
engine/gfx/: draw_vert.h  gfx.h  gl_context.cpp  gl_context.h  handle.h  image.cpp  image.h  material.h  memory.cpp  memory.h  render_context.h  render_types.h  renderer.cpp  renderer.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h  vertex.cpp  vertex.h  vertex_cache.cpp  vertex_cache.h
engine/graphics/: GPUInternal.cpp  GPUInternal.h  GPUTypes.cpp  GPUTypes.h
engine/math/: bounds.cpp  bounds.h  math_converters.h
engine/resource/: allocator.cpp  allocator.h  context.cpp  context.h  filesystem.cpp  filesystem.h  memory.cpp  memory.h  resource.h  resource_manager.cpp  resource_manager.h
engine/scene/: camera.cpp  camera.h  light.h  mesh.cpp  mesh.h  node.cpp  node.h  renderable.h  scene.h
engine2/: Bounds.cpp  Bounds.h  BufferObject.cpp  BufferObject.h  BufferObject_GL.cpp  Camera.cpp  Camera.h  DrawVert.h  Engine.cpp  Engine.h  EngineTypes.h  Entity3D.cpp  Entity3D.h  Filesystem.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer_GL.cpp  Frustum.cpp  Frustum.h  GLState.h  GpuTypes.h  Heap.cpp  Heap.h  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  Image_GL.cpp  Light.cpp  Light.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Math.h  Model.cpp  Model.h  Node3D.cpp  Node3D.h  RenderBackend.cpp  (+21 more)
engine2/OpenGL/: BufferObject_GL.cpp  Framebuffer_GL.cpp  Image_GL.cpp  RenderBackend_GL.cpp  RenderBackend_GL.h  RenderProgs_GL.cpp
engine2/include/: JSE.h  JSE_BoundingVolume.h  JSE_Concurrent.h  JSE_Containers.h  JSE_Context.h  JSE_Converters.h  JSE_Core.h  JSE_Engine.h  JSE_Filesystem.h  JSE_GfxCore.h  JSE_GfxCoreGL.h  JSE_GfxCoreGL46.h  JSE_GfxCoreNull.h  JSE_GfxDrawVert.h  JSE_GfxRender.h  JSE_GfxVertCache.h  JSE_GfxVertexBuffer.h  JSE_Handle.h  JSE_Heap.h  JSE_Input.h  JSE_Log.h  JSE_Material.h  JSE_Memory.h  JSE_Mesh.h  JSE_MeshGeometry.h  JSE_Module.h  JSE_Node.h  JSE_Resources.h  JSE_Sys.h  JSE_Texture.h  JSE_TextureManager.h  JSE_Thread.h  JSE_Updatable.h  engine.h  logger.h
engine2/src/: JSE_BoundingVolume.cpp  JSE_Concurrent.cpp  JSE_Context.cpp  JSE_Core.cpp  JSE_Engine.cpp  JSE_Filesystem.cpp  JSE_GfxCore.cpp  JSE_GfxCoreGL46.cpp  JSE_GfxCoreNull.cpp  JSE_GfxRender.cpp  JSE_GfxVertCache.cpp  JSE_GfxVertexBuffer.cpp  JSE_Heap.cpp  JSE_Input.cpp  JSE_Log.cpp  JSE_Memory.cpp  JSE_Mesh.cpp  JSE_MeshGeometry.cpp  JSE_Node.cpp  JSE_Resources.cpp  JSE_Sys.cpp  JSE_TextureManager.cpp  JSE_Thread.cpp  gfxcore_GL.cpp  logger.cpp
engine2_old/include/: JSE.h  JSE_BoundingVolume.h  JSE_Concurrent.h  JSE_Config.h  JSE_Containers.h  JSE_GfxCore.h  JSE_GfxCoreGL46.h  JSE_GfxRender.h  JSE_GfxVertexBuffer.h  JSE_Log.h  JSE_Material.h  JSE_Memory.h  JSE_Mesh.h  JSE_MeshGeometry.h  JSE_Node.h  JSE_PointLight.h  JSE_Renderer.h  JSE_Surface.h  JSE_Texture.h  JSE_TextureManager.h
engine2_old/src/: JSE_Context.cpp  JSE_Engine.cpp  JSE_GfxCoreGL46.cpp  JSE_GfxCoreNull.cpp  JSE_GfxRender.cpp  JSE_GfxVertCache.cpp  JSE_Input.cpp  JSE_Log.cpp  JSE_Material.cpp  JSE_Memory.cpp  JSE_Mesh.cpp  JSE_Node.cpp  JSE_Resources.cpp
(+37 files in other folders)
